Clean up home page and move divs in to partials

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,3 @@
-<div class="home-panel small-12 columns">
-	<div class="home-panel-content">
-		<h1>Log more. Search less.</h1>
+<%= render 'home_panel' %>
 
-		<p>Keep a log of errors you come across during development, as well as your attempts and solutions for future reference.</p>
-
-		<% if user_signed_in? %>
-		<% else %>
-			<a href="<%= new_user_registration_path %>" class="button">Sign Up</a>
-			<a href="<%= about_path %>" class="button">Learn More</a>
-		<% end %>
-	</div>
-</div>
+<%= render 'about' %>
