--- a/app/views/layouts/_sidenav.html.erb
+++ b/app/views/layouts/_sidenav.html.erb
@@ -5,7 +5,7 @@
   <a class="item" href="/errorlogs/new">
     <i class="fa fa-plus"> New Error</i>
   </a>
-  <a class="item">
+  <a class="item" href="/users/edit">
     <i class="fa fa-cogs"> Account</i>
   </a>
 </div>
