update index view

--- a/app/views/errorlogs/index.html.erb
+++ b/app/views/errorlogs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="title small-12 columns">
-		<h3>Public Errorlogs</h3>
+		<h3>Public Error Logs</h3>
 	</div>
 </div>
 
