--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -1,59 +1,9 @@
 <!-- Display WITH Image -->
 <% if @errorlog.image_file_name != nil %>
-	<div class="row">
-		<div class="small-12 large-9 columns title">
-			<h4><%= @errorlog.title %></h4>
-		</div>
-		<div class="small-12 large-9 columns panel">
-			<%= image_tag @errorlog.image.url %>
-		</div>
-		<div class="small-3 columns panel desktop-only">
-			<div class="err-info">
-				<p>OS: <%= @errorlog.os %></p>
-				<p>OS Version: <%= @errorlog.os_version %></p>
-				<p>Language: <%= @errorlog.language %></p>
-				<p>Language Version: <%= @errorlog.language_version %></p>
-				<p>Framework: <%= @errorlog.framework %></p>
-				<p>Framework Version: <%= @errorlog.framework_version %></p>
-			  <p>
-			  	<% @errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
-	        	<span class="[success alert secondary] label"><%= t %></span>
-	        <% end %>
-	      </p>
-			</div>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="err-desc small-12 large-9 columns panel">
-			<%= simple_format(@errorlog.description) %>
-		</div>
-	</div>
+	<%= render 'errorlog_with_image' %>
 <% else %>
 <!-- Display WITHOUT Image -->
-	<div class="row">
-		<div class="small-9 columns title">
-			<h2><%= @errorlog.title %></h2>
-		</div>
-		<div class="err-desc small-9 columns panel">
-			<%= simple_format(@errorlog.description) %>
-		</div>
-		<div class="small-3 columns panel desktop-only">
-			<div class="err-info">
-				<p>OS: <%= @errorlog.os %></p>
-				<p>OS Version: <%= @errorlog.os_version %></p>
-				<p>Language: <%= @errorlog.language %></p>
-				<p>Language Version: <%= @errorlog.language_version %></p>
-				<p>Framework: <%= @errorlog.framework %></p>
-				<p>Framework Version: <%= @errorlog.framework_version %></p>
-			  <p>
-			  	<% @errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
-          	<span class="[success alert secondary] label"><%= t %></span>
-          <% end %>
-        </p>
-			</div>
-		</div>
-	</div>
+	<%= render 'errorlog_without_image' %>
 <% end %>
 
 <% if @errorlog.user == current_user %>
@@ -82,8 +32,6 @@
 		</div>
 	<% end %>
 <% end %>
-
-
 
 
 
