--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -4,5 +4,6 @@
 	<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 <% else %>
 	<li><%= link_to "Public Errorlogs", errorlogs_path %></li>
+	<li><%= link_to "Sign Up", new_user_registration_path %></li>
 	<li class="active"><%= link_to "Log In", new_user_session_path %></li>
 <% end %>
