--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -49,7 +49,7 @@
 
       <div class="row">
         <div class="small-12 columns">
-          <%= f.submit "Sign up", class: "button red-button"  %>
+          <%= f.submit "Sign up", class: "button"  %>
         </div>
       </div>
     <% end %>
