--- a/app/views/errorlogs/_errorlog_without_image.html.erb
+++ b/app/views/errorlogs/_errorlog_without_image.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="small-9 columns title">
+	<div class="small-12 large-9 columns title">
 		<h4><%= @errorlog.title %></h4>
 	</div>
-	<div class="err-desc small-9 columns panel">
+	<div class="err-desc small-12 large-9 columns panel">
 		<%= simple_format(@errorlog.description) %>
 	</div>
 	<div class="small-3 columns panel desktop-only">
