--- a/app/views/layouts/dashboard_layout.html.erb
+++ b/app/views/layouts/dashboard_layout.html.erb
@@ -8,7 +8,9 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag "vendor/modernizr" %>
-        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <script src="js/foundation/foundation.js"></script>
+    <script src="js/foundation/foundation.topbar.js"></script>
     <%= csrf_meta_tags %>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -19,5 +21,8 @@
 		<%= render "layouts/header" %>
     <%= render "layouts/sidenav" %>
     <%= yield %>
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
