--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .top-bar-section ul li>a {
-  background-color: $red;
+  background-color: black;
 }
 
 .top-bar .title-area .name h1 a {
@@ -59,6 +59,11 @@ body {
   }
 }
 
+@media (min-width: 450px) {
+  .mobile-only {
+      display:none !important;
+  }
+}
 .red-button {
 	background-color: $red;
 }
@@ -122,9 +127,10 @@ body {
 }
 
 .home-panel-headtext h1 {
-	font-size: 4em;
+	font-size: 4.5vw;
 	color: #6C7A89;
 	padding-left: 1%;
+
 }
 
 .home-panel-subtext {
@@ -193,6 +199,16 @@ body {
 	margin-top: 10px !important;
 }
 
+.mobile-dash-nav {
+	text-align: center;
+	padding-top: 5%;
+}
+
+.mobile-item {
+	color: white;
+	background: $red;
+	padding: 1%;
+}
 
 .item:hover {
 	background-color: black;
