--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,12 @@
 <div class="dashboard-content small-12 large-9 columns">
 	<div class="row">
+		<div class="row mobile-dash-nav mobile-only">
+			<div class="small-12 columns">
+				<a class="mobile-item" href="/dashboard">Home</a>
+				<a class="mobile-item" href="/errorlogs/new">New Error</a>
+				<a class="mobile-item" href="/users/edit">Account</a>
+			</div>
+		</div>
 		<div class="small-12 large-6 columns">
 			<div class="dash-err-title small-12 columns">
 				<h3><i class="fa fa-list-ol"></i> Your Error Logs</h3>
