Update about page text

--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -1,6 +1,6 @@
 <div id="about">
 	<div class="row intro-message">
-		<div class="small-6 columns">
+		<div class="small-12 large-6 columns">
 			<h4>Features:</h4>
 			<ul>
 				<li><i class="fa fa-caret-right"></i> Log errors as they occur</li>
@@ -14,7 +14,7 @@
 			<p></p>
 		</div>
 
-		<div class="small-6 columns">
+		<div class="small-12 large-6 columns">
 			<%= image_tag "errupt-dash-screen.png", class: "errupt-screenshot" %>
 			<h5>A couple of minutes now could save hours of frustration in the future.</h5>
 		</div>
@@ -22,15 +22,15 @@
 	<div class="row intro-message">
 		<div class="large-4 columns desktop-only">
 
-			<h3>"Your time is important. Don't waste it trying to solve the same problem twice."</h3>
+			<h3>Your time is important. Don't waste it trying to solve the same problem twice.</h3>
 			
 		</div>
 		<div class="small-12 large-8 columns">
 			<h4>Why was Errupt created?</h4>
-			<p>As developers, we often run in to errors, and it's our job to figure out how to fix it. We may spend minute, hours, or even days trying to fix one error, losing some hairs and tempers along the way. The routine is almost always the same. If we can't pinpoint the solution to an error right away, we usually try some assumptions, google for the error, or if we're lucky, ask another dev buddy if they have any idea how to fix it.</p>
-			<p>However, when was the last time you took a few minutes to write down a big error you ran in to, along with how you finally solved, and maybe even take note of which approaches didn't work? What if a few weeks, months or even years down the line, yourself, a friend or a colleague runs in to the exact same error. Will you remember how you resolved it the first time? It's possible that you may not remember at all. You may have to look through your code from a previous project and try to figure out how you fixed it, or spend hours trying to find that one google search result which had the answer. It all boils down to time wasted.</p>
+			<p>As developers, we often run in to errors and it's our job to figure out how to fix it. We may spend minutes, hours, or even days trying to fix one error, losing some hairs and tempers along the way. The routine is almost always the same. If we can't pinpoint the solution to a problem right away, we usually try some assumptions, google for the error, or ask another dev buddy if they have any idea how to fix it.</p>
+			<p>But when was the last time you took a few minutes to write down a big error you ran in to, along with how you finally solved it, and maybe even took note of which approaches did not work? What if a few weeks, months or even years down the road, yourself, a friend or a colleague runs in to the same exact error. Will you remember how you resolved it the first time? It's possible that you may not remember at all. You may have to look through your code from a previous project and try to figure out how your solution, or spend hours trying to find that one google search result which had the answer. It all boils down to time wasted.</p>
 			<p>Enter Errupt.</p>
-			<p>Errupt allows you to keep a log of errors, along with screenshots and additional details such as the technologies you are using, including the language and framework version numbers. These small details can make a big difference. Perhaps, the way you solve an error in Ruby on Rails 4 is not the same as how you would solve it in Rails 3. Keeping a detailed error log helps you and other developers approach a problem with more knowledge while reducing the chance of having to do the same work twice.</p>
+			<p>Errupt allows you to keep a log of errors, along with screenshots and additional details such as the technologies you are using, including the language and framework version numbers. These small details can make a big difference. It could turn out to be that the way you solve an error in Ruby on Rails 3 may not be the same as how you would solve it in Rails 4. Keeping a detailed error log helps you and other developers approach a problem with more knowledge while reducing the chance of having to do the same work twice.</p>
 		</div>
 	</div>
 </div>
