fix error with editing and deleting solutions

--- a/app/views/solutions/_edit_solution_form.html.erb
+++ b/app/views/solutions/_edit_solution_form.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<%= form_for(@solution, url: errorlog_solutions_path(@errorlog), :method => :update) do |f| %>
+<%= form_for(@solution, url: errorlog_solutions_path(@errorlog, @solution), :method => :update) do |f| %>
 	<div class="row">
 	  <div class="large-12 columns">
 	    <%= f.label :description %>
